versioned_docs/version-2.15/reference/subsystems/autoflake.mdx
---
title: autoflake
description: |
  The Autoflake Python code formatter (https://github.com/myint/autoflake).
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

The Autoflake Python code formatter (https://github.com/myint/autoflake).

Backend: <span className="color--primary">`pants.backend.experimental.python.lint.autoflake`</span>

Config section: <span className="color--primary">`[autoflake]`</span>

<span className={styles.options}>

## Basic options

### `args`

<Option
  cli_repr={`--autoflake-args="[<shell_str>, <shell_str>, ...]"`}
  env_repr='PANTS_AUTOFLAKE_ARGS'
  toml_repr={`[autoflake]
args = [
    <shell_str>,
    <shell_str>,
    ...,
]`}
  default_repr={`[\n  "--remove-all-unused-imports"\n]`}
>

Arguments to pass directly to Autoflake, e.g. `--autoflake-args='--remove-all-unused-imports --target-version=py37 --quiet'`.

</Option>

### `skip`

<Option
  cli_repr={`--[no-]autoflake-skip`}
  env_repr='PANTS_AUTOFLAKE_SKIP'
  toml_repr={`[autoflake]
skip = <bool>`}
  default_repr={`False`}
>

If true, don&#x27;t use Autoflake when running `/home/josh/work/scie-pants/dist/pants fmt` and `/home/josh/work/scie-pants/dist/pants lint`.

</Option>

## Advanced options

### `console_script`

<Option
  cli_repr={`--autoflake-console-script=<str>`}
  env_repr='PANTS_AUTOFLAKE_CONSOLE_SCRIPT'
  toml_repr={`[autoflake]
console_script = <str>`}
  default_repr={`autoflake`}
>

The console script for the tool. Using this option is generally preferable to (and mutually exclusive with) specifying an --entry-point since console script names have a higher expectation of staying stable across releases of the tool. Usually, you will not want to change this from the default.

</Option>

### `entry_point`

<Option
  cli_repr={`--autoflake-entry-point=<str>`}
  env_repr='PANTS_AUTOFLAKE_ENTRY_POINT'
  toml_repr={`[autoflake]
entry_point = <str>`}
  default_repr={`None`}
>

The entry point for the tool. Generally you only want to use this option if the tool does not offer a --console-script (which this option is mutually exclusive with). Usually, you will not want to change this from the default.

</Option>

### `extra_requirements`

<Option
  cli_repr={`--autoflake-extra-requirements="['<str>', '<str>', ...]"`}
  env_repr='PANTS_AUTOFLAKE_EXTRA_REQUIREMENTS'
  toml_repr={`[autoflake]
extra_requirements = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[]`}
>

Any additional requirement strings to use with the tool. This is useful if the tool allows you to install plugins or if you need to constrain a dependency to a certain version.

</Option>

### `interpreter_constraints`

<Option
  cli_repr={`--autoflake-interpreter-constraints="['<str>', '<str>', ...]"`}
  env_repr='PANTS_AUTOFLAKE_INTERPRETER_CONSTRAINTS'
  toml_repr={`[autoflake]
interpreter_constraints = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "CPython>=3.7,<4"\n]`}
>

Python interpreter constraints for this tool.

</Option>

### `lockfile`

<Option
  cli_repr={`--autoflake-lockfile=<str>`}
  env_repr='PANTS_AUTOFLAKE_LOCKFILE'
  toml_repr={`[autoflake]
lockfile = <str>`}
  default_repr={`<default>`}
>

Path to a lockfile used for installing the tool.

Set to the string `<default>` to use a lockfile provided by Pants, so long as you have not changed the `--version` and `--extra-requirements` options, and the tool&#x27;s interpreter constraints are compatible with the default. Pants will error or warn if the lockfile is not compatible (controlled by `[python].invalid_lockfile_behavior`). See https://github.com/pantsbuild/pants/blob/release_2.15.2/src/python/pants/backend/python/lint/autoflake/autoflake.lock for the default lockfile contents.

Set to the string `<none>` to opt out of using a lockfile. We do not recommend this, though, as lockfiles are essential for reproducible builds and supply-chain security.

To use a custom lockfile, set this option to a file path relative to the build root, then run `/home/josh/work/scie-pants/dist/pants generate-lockfiles --resolve=autoflake`.

Alternatively, you can set this option to the path to a custom lockfile using pip&#x27;s requirements.txt-style, ideally with `--hash`. Set `[python].invalid_lockfile_behavior = 'ignore'` so that Pants does not complain about missing lockfile headers.

</Option>

### `version`

<Option
  cli_repr={`--autoflake-version=<str>`}
  env_repr='PANTS_AUTOFLAKE_VERSION'
  toml_repr={`[autoflake]
version = <str>`}
  default_repr={`autoflake==1.4`}
>

Requirement string for the tool.

</Option>

## Deprecated options

### `export`

<Option
  cli_repr={`--[no-]autoflake-export`}
  env_repr='PANTS_AUTOFLAKE_EXPORT'
  toml_repr={`[autoflake]
export = <bool>`}
  default_repr={`True`}
  removal_version='2.23.0.dev0'
  removal_hint={'Use the export goal\'s --resolve option to select tools to export, instead of using this option to exempt a tool from export-by-default.'}
>

If true, export a virtual environment with Autoflake when running `/home/josh/work/scie-pants/dist/pants export`.

This can be useful, for example, with IDE integrations to point your editor to the tool&#x27;s binary.

</Option>

## Related subsystems

None

</span>
